Fixed issue of icons not showing up
box-sizing:border-box everything isn't always a great idea

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,7 +9,7 @@ $z-index-section: 10;
 $z-index-nav: 20;
 
 * {
-  box-sizing: border-box;
+  //box-sizing: border-box;
 }
 
 //Sass Mixins
